[gd_scene load_steps=11 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Sprites/Tiles/door.png" type="Texture" id=2]
[ext_resource path="res://Collectables/Beer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hallways/FirstHallway.gd" type="Script" id=4]
[ext_resource path="res://Characters/Zombie.tscn" type="PackedScene" id=5]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.7425, 50.1954 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.0773, 49.8502 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.43771, 136.414 )

[sub_resource type="Animation" id=4]
resource_name = "NeedKey"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="FirstHallway" type="Node2D"]
position = Vector2( 0, 100 )
script = ExtResource( 4 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( -131075, 40, 0, -131074, 40, 0, -131073, 40, 0, -196608, 40, 0, -196607, 40, 0, -196606, 40, 0, -196605, 40, 0, -196604, 40, 0, -196603, 40, 0, -196602, 40, 0, -196601, 40, 0, -196600, 40, 0, -196599, 40, 0, -196598, 40, 0, -196597, 40, 0, -196596, 40, 0, -196595, 40, 0, -196594, 40, 0, -196593, 40, 0, -196592, 40, 0, -196591, 40, 0, -196590, 40, 0, -196589, 1610612776, 0, -196588, 1610612776, 0, -196587, 1610612776, 0, -196586, 1610612776, 0, -65539, 40, 0, -65538, 40, 0, -65537, 40, 0, -131072, 40, 0, -131071, 40, 0, -131070, 40, 0, -131069, 40, 0, -131068, 40, 0, -131067, 40, 0, -131066, 40, 0, -131065, 40, 0, -131064, 40, 0, -131063, 40, 0, -131062, 40, 0, -131061, 40, 0, -131060, 40, 0, -131059, 40, 0, -131058, 40, 0, -131057, 40, 0, -131056, 40, 0, -131055, 40, 0, -131054, 40, 0, -131053, 1610612776, 0, -131052, 1610612776, 0, -131051, 1610612776, 0, -131050, 1610612776, 0, -3, 40, 0, -2, 40, 0, -1, 40, 0, -65536, 40, 0, -65535, 40, 0, -65534, 40, 0, -65533, 40, 0, -65532, 40, 0, -65531, 40, 0, -65530, 40, 0, -65529, 40, 0, -65528, 40, 0, -65527, 40, 0, -65526, 40, 0, -65525, 40, 0, -65524, 40, 0, -65523, 40, 0, -65522, 40, 0, -65521, 40, 0, -65520, 40, 0, -65519, 40, 0, -65518, 40, 0, -65517, 1610612776, 0, -65516, 1610612776, 0, -65515, 1610612776, 0, -65514, 1610612776, 0, 65533, 40, 0, 65534, 40, 0, 65535, 40, 0, 0, 23, 0, 1, 23, 0, 2, 23, 0, 3, 23, 0, 4, 23, 0, 5, 23, 0, 6, 23, 0, 7, 23, 0, 8, 23, 0, 9, 23, 0, 10, 23, 0, 11, 23, 0, 12, 23, 0, 13, 23, 0, 14, 23, 0, 16, 40, 0, 17, 40, 0, 18, 40, 0, 19, 1610612776, 0, 20, 1610612776, 0, 21, 1610612776, 0, 22, 1610612776, 0, 131069, 40, 0, 131070, 40, 0, 131071, 40, 0, 65552, 40, 0, 65553, 40, 0, 65554, 40, 0, 65555, 1610612776, 0, 65556, 1610612776, 0, 65557, 1610612776, 0, 65558, 1610612776, 0, 196605, 40, 0, 196606, 40, 0, 196607, 40, 0, 131088, 40, 0, 131089, 40, 0, 131090, 40, 0, 131091, 1610612776, 0, 131092, 1610612776, 0, 131093, 1610612776, 0, 131094, 1610612776, 0, 262141, 40, 0, 262142, 40, 0, 262143, 40, 0, 196624, 40, 0, 196625, 40, 0, 196626, 40, 0, 196627, 1610612776, 0, 196628, 1610612776, 0, 196629, 1610612776, 0, 196630, 1610612776, 0, 327677, 40, 0, 327678, 40, 0, 327679, 40, 0, 262160, 40, 0, 262161, 40, 0, 262162, 40, 0, 262163, 1610612776, 0, 262164, 1610612776, 0, 262165, 1610612776, 0, 262166, 1610612776, 0, 393213, 40, 0, 393214, 40, 0, 393215, 40, 0, 327696, 40, 0, 327697, 40, 0, 327698, 40, 0, 327699, 1610612776, 0, 327700, 1610612776, 0, 327701, 1610612776, 0, 327702, 1610612776, 0, 458749, 40, 0, 458750, 40, 0, 458751, 40, 0, 393216, 40, 0, 393217, 40, 0, 393218, 40, 0, 393219, 40, 0, 393220, 40, 0, 393221, 40, 0, 393222, 40, 0, 393223, 40, 0, 393224, 40, 0, 393225, 40, 0, 393226, 40, 0, 393227, 40, 0, 393228, 40, 0, 393229, 40, 0, 393230, 40, 0, 393231, 40, 0, 393232, 40, 0, 393233, 40, 0, 393234, 40, 0, 393235, 1610612776, 0, 393236, 1610612776, 0, 393237, 1610612776, 0, 393238, 1610612776, 0, 524285, 40, 0, 524286, 40, 0, 524287, 40, 0, 458752, 40, 0, 458753, 40, 0, 458754, 40, 0, 458755, 40, 0, 458756, 40, 0, 458757, 40, 0, 458758, 40, 0, 458759, 40, 0, 458760, 40, 0, 458761, 40, 0, 458762, 40, 0, 458763, 40, 0, 458764, 40, 0, 458765, 40, 0, 458766, 40, 0, 458767, 40, 0, 458768, 40, 0, 458769, 40, 0, 458770, 40, 0, 458771, 1610612776, 0, 458772, 1610612776, 0, 458773, 1610612776, 0, 458774, 1610612776, 0, 589821, 40, 0, 589822, 40, 0, 589823, 40, 0, 524288, 40, 0, 524289, 40, 0, 524290, 40, 0, 524291, 40, 0, 524292, 40, 0, 524293, 40, 0, 524294, 40, 0, 524295, 40, 0, 524296, 40, 0, 524297, 40, 0, 524298, 40, 0, 524299, 40, 0, 524300, 40, 0, 524301, 40, 0, 524302, 40, 0, 524303, 40, 0, 524304, 40, 0, 524305, 40, 0, 524306, 40, 0, 524307, 1610612776, 0, 524308, 1610612776, 0, 524309, 1610612776, 0, 524310, 1610612776, 0, 655357, 40, 0, 655358, 40, 0, 655359, 40, 0, 589824, 40, 0, 589825, 40, 0, 589826, 40, 0, 589827, 40, 0, 589828, 40, 0, 589829, 40, 0, 589830, 40, 0, 589831, 40, 0, 589832, 40, 0, 589833, 40, 0, 589834, 40, 0, 589835, 40, 0, 589836, 40, 0, 589837, 40, 0, 589838, 40, 0, 589839, 40, 0, 589840, 40, 0, 589841, 40, 0, 589842, 40, 0, 589843, 1610612776, 0, 589844, 1610612776, 0, 589845, 1610612776, 0, 589846, 1610612776, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65536, 21, 0, 65537, 21, 0, 65538, 21, 0, 65539, 21, 0, 65541, 21, 0, 65542, 21, 0, 65543, 21, 0, 65544, 21, 0, 65545, 21, 0, 65547, 21, 0, 65548, 21, 0, 65549, 21, 0, 65550, 21, 0, 65551, 21, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 15, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 15, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 15, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 15, 0, 393216, 20, 0, 393217, 20, 0, 393218, 20, 0, 393219, 20, 0, 393220, 20, 0, 393221, 20, 0, 393222, 20, 0, 393223, 20, 0, 393224, 20, 0, 393225, 20, 0, 393226, 20, 0, 393227, 20, 0, 393228, 20, 0, 393229, 20, 0, 393230, 20, 0, 393231, 20, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 87.3071, 249.216 )

[node name="Door1" type="Area2D" parent="."]
position = Vector2( 1.5874, 1.5874 )

[node name="door1" type="Sprite" parent="Door1"]
position = Vector2( 286.69, 79.4514 )
scale = Vector2( 0.474141, 0.454392 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door1"]
position = Vector2( 287.658, 72.7488 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Door1"]
margin_left = 269.337
margin_top = 18.3394
margin_right = 306.337
margin_bottom = 32.3394
text = "B010"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door2" type="Area2D" parent="."]
position = Vector2( 670.09, 83.4275 )

[node name="door2" type="Sprite" parent="Door2"]
position = Vector2( 1.75464, -1.15279 )
scale = Vector2( 0.493993, 0.473991 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2( 1.33472, -6.67418 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Door2"]
margin_left = -16.0181
margin_top = -64.7397
margin_right = 23.9819
margin_bottom = -50.7397
text = "B011"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Area2D" parent="."]
position = Vector2( -39.685, 244.46 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back"]
position = Vector2( 42.8435, 19.227 )
scale = Vector2( 2, 1 )
shape = SubResource( 3 )

[node name="Zombie" parent="." instance=ExtResource( 5 )]
position = Vector2( 508.119, 254.875 )

[node name="Beer" parent="." instance=ExtResource( 3 )]
position = Vector2( 987.303, 260.386 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/NeedKey = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -10.0
margin_right = 225.0
margin_bottom = 74.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = -69.5
margin_right = 103.5
margin_bottom = -12.5
custom_fonts/font = ExtResource( 6 )
text = "You need a key to
  open this room"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Door1" to="." method="_on_Door1_body_entered"]
[connection signal="body_entered" from="Door2" to="." method="_on_Door2_body_entered"]
[connection signal="body_entered" from="Back" to="." method="_on_Back_body_entered"]
